Fix bug where highlighted code blocks didn’t get extra space

--- a/assets/scss/code.scss
+++ b/assets/scss/code.scss
@@ -23,7 +23,10 @@ pre {
 
   // Without this code that doesn’t fit horizontally overflows
   overflow-x: scroll;
+}
 
+.highlight,
+pre:not(.chroma) {
   * + &,
   & + * {
     margin-top: 2rem;
